- celebrity image - layout bug fixes

--- a/grails-app/assets/stylesheets/vanity/base.less
+++ b/grails-app/assets/stylesheets/vanity/base.less
@@ -32,7 +32,6 @@ body {
   background-color: @body-bg;
   font-family: 'Open Sans', sans-serif;
   font-weight:300;
-  padding-top: 50px;
 }
 
 h1, h2, h3{
