--- a/grails-app/assets/stylesheets/vanity/list.less
+++ b/grails-app/assets/stylesheets/vanity/list.less
@@ -13,7 +13,7 @@
     font-size: 36px;
     font-weight: bold;
     color: @main-color;
-    padding-top:24px;
+    padding-top: 24px;
 
     span {
       color: #535353;
@@ -50,10 +50,14 @@
 }
 
 #biography {
- background: #fff;
-  overflow:auto;
-  margin-bottom:40px;
-  padding-bottom:10px;
+  background: #fff;
+  overflow: auto;
+  margin-bottom: 40px;
+  padding-bottom: 10px;
+
+  img {
+    margin-top: 15px;
+  }
 }
 
 #pagination {
