--- a/grails-app/assets/stylesheets/vanity/social/main.less
+++ b/grails-app/assets/stylesheets/vanity/social/main.less
@@ -4,6 +4,7 @@
 
 #social {
 
+  margin-top: 55px;
   border-radius: 0;
   border-width: 1px;
   color: #535353;
